--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "update-inventory": "node scripts/updateInventory.js"
   },
   "dependencies": {
+    "csv-parse": "^5.5.6",
     "firebase": "^10.12.2",
     "isomorphic-unfetch": "^4.0.2",
     "json2csv": "^6.0.0-alpha.2",
